# mxml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
mxml.xcodeproj/: project.pbxproj
mxml.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: Event.h  EventFactory.cpp  EventSequence.cpp  EventSequence.h  Span.h  SpanCollection.cpp  SpanFactory.cpp  SpanFactory.h
src/dom/: Accidental.h  Appearance.h  Attributes.h  Backup.h  Beam.h  Credit.h  Defaults.h  Direction.h  EmptyPlacement.h  Ending.h  Fermata.h  Identification.cpp  Identification.h  Notations.h  Note.cpp  Optional.h  Ornaments.h  Part.cpp  Pedal.h  Scaling.h  Slur.h  Sound.h  StaffLayout.h  Syllabic.h  Tied.h  Time.h  Turn.h  Types.h
src/geometry/: AccidentalGeometry.h  ArticulationGeometry.h  BarlineGeometry.cpp  BarlineGeometry.h  BeamGeometry.cpp  ChordGeometry.h  ClefGeometry.cpp  ClefGeometry.h  DirectionGeometry.h  DotGeometry.h  EndingGeometry.h  FermataGeometry.h  Geometry.h  KeyGeometry.cpp  KeyGeometry.h  LineSegment.h  LyricGeometry.cpp  LyricGeometry.h  MeasureGeometry.cpp  MeasureGeometry.h  NoteGeometry.h  OrnamentsGeometry.cpp  OrnamentsGeometry.h  PartGeometry.h  PedalGeometry.h  Point.h  Rect.h  RestGeometry.h  ScoreGeometry.cpp  ScoreGeometry.h  SpanDirectionGeometry.cpp  SpanDirectionGeometry.h  SpanDirectionGeometryFactory.cpp  SpanDirectionGeometryFactory.h  StemGeometry.h  StreamOperators.h  TieGeometry.cpp  TieGeometry.h  TieGeometryFactory.h  TimeSignatureGeometry.cpp  (+1 more)
src/mxml/: Algorithm.h  AttributesManager.cpp  AttributesManager.h  EqualityConstraintSolver.cpp  EqualityConstraintSolver.h  Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  EventSequence.cpp  EventSequence.h  Jump.h  Loop.h  (+25 more)
test/: EventFactoryTests.cpp  GeometryTests.cpp  MeasureGeometryTests.cpp  NoteTests.cpp  ParsingTests.cpp  PartGeometryTests.cpp  main.cpp  moonlight.xml
tests/: AlgorithmTests.cpp  AttributesManagerTests.cpp  EqualityConstraintSolverTests.cpp  EventFactoryTests.cpp  GeometryTests.cpp  KeyTests.cpp  LoopsAndJumpsTests.cpp  MeasureGeometryTests.cpp  MetricsTests.cpp  NoteTests.cpp  ParsingTests.cpp  PartGeometryTests.cpp  ScoreFactory.cpp  ScoreFactory.h  ScorePropertiesTests.cpp
(+374 files in other folders)
